Java 16 and changes
Signed-off-by: ishwi <ishwi6@gmail.com>