@@ -62,7 +62,7 @@ public class NpReactionsCommand extends ConcurrentCommand<EmotiParameters> {
                 sendMessageQueue(e, "Don't have any reaction set");
                 return;
             }
-            List<String> displaying = serverReactions.stream().map(EmotiParameters.Emotable::toDisplay).collect(Collectors.toList());
+            List<String> displaying = serverReactions.stream().map(EmotiParameters.Emotable::toDisplay).toList();
             sendMessageQueue(e, "Have these reactions: " + String.join(" ", displaying));
             return;
 
