@@ -57,9 +57,9 @@ public class IndexCommand extends ConcurrentCommand<CommandParameters> {
         Set<Long> thisServer = db.getAll(e.getGuild().getIdLong()).stream().map(UsersWrapper::getDiscordID).collect(Collectors.toUnmodifiableSet());
 
         Set<Long> members = e.getGuild().getMembers().stream().filter(x -> x.getUser().getIdLong() != x.getJDA().getSelfUser().getIdLong()).map(x -> x.getUser().getIdLong()).collect(Collectors.toSet());
-        List<Long> toInsert = members.stream().filter(x -> allBot.contains(x) && !thisServer.contains(x)).collect(Collectors.toList());
+        List<Long> toInsert = members.stream().filter(x -> allBot.contains(x) && !thisServer.contains(x)).toList();
         toInsert.forEach(x -> db.addGuildUser(x, e.getGuild().getIdLong()));
-        List<Long> notOnServer = thisServer.stream().filter(x -> !members.contains(x)).collect(Collectors.toList());
+        List<Long> notOnServer = thisServer.stream().filter(x -> !members.contains(x)).toList();
         if (toInsert.isEmpty()) {
             sendMessageQueue(e, "Didn't have anyone to add");
         } else {
