@@ -19,7 +19,6 @@ import dao.entities.AlbumInfo;
 import dao.entities.DiscordUserDisplay;
 import dao.entities.LastFMData;
 import dao.entities.TimeFrameEnum;
-import dao.exceptions.InstanceNotFoundException;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
@@ -30,7 +29,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
-import java.util.stream.Collectors;
 
 public class DecadeDistributionCommand extends ConcurrentCommand<TimeFrameParameters> {
 
@@ -68,7 +66,7 @@ public class DecadeDistributionCommand extends ConcurrentCommand<TimeFrameParame
 
 
     @Override
-    protected void onCommand(MessageReceivedEvent e, @NotNull TimeFrameParameters params) throws LastFmException, InstanceNotFoundException {
+    protected void onCommand(MessageReceivedEvent e, @NotNull TimeFrameParameters params) throws LastFmException {
         LastFMData user = params.getLastFMData();
         Map<Year, Integer> counts;
         if (params.getTime() == TimeFrameEnum.ALL) {
@@ -78,14 +76,14 @@ public class DecadeDistributionCommand extends ConcurrentCommand<TimeFrameParame
             BlockingQueue<UrlCapsule> queue = new LinkedBlockingQueue<>();
             lastFM.getChart(user, ctF,
                     3000, 1, TopEntity.ALBUM, ChartUtil.getParser(ctF, TopEntity.ALBUM, ChartParameters.toListParams(), lastFM, user), queue);
-            List<AlbumInfo> albums = queue.stream().map(t -> new AlbumInfo(t.getAlbumName(), t.getArtistName())).collect(Collectors.toList());
+            List<AlbumInfo> albums = queue.stream().map(t -> new AlbumInfo(t.getAlbumName(), t.getArtistName())).toList();
             counts = db.getUserDecadesFromList(user.getName(), albums);
         }
 
         DiscordUserDisplay uInfo = CommandUtil.getUserInfoConsideringGuildOrNot(e, user.getDiscordId());
         List<String> collect = counts.entrySet().stream().sorted(Map.Entry.comparingByValue((Comparator.reverseOrder()))).map(t ->
                 ". **%ds**: %d %s%n".formatted(CommandUtil.getDecade(t.getKey().getValue()), t.getValue(), CommandUtil.singlePlural(t.getValue(), "album", "albums"))
-        ).collect(Collectors.toList());
+        ).toList();
 
         StringBuilder a = new StringBuilder();
         for (int i = 0; i < collect.size() && i < 10; i++) {
