@@ -28,7 +28,6 @@ import java.text.DecimalFormat;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 public class SongAudioFeaturesCommand extends ConcurrentCommand<ArtistAlbumParameters> {
     private final Spotify spotify;
@@ -86,7 +85,7 @@ public class SongAudioFeaturesCommand extends ConcurrentCommand<ArtistAlbumParam
         List<AudioFeatures> audioFeatures = spotify.getAudioFeatures(Set.of(value.getId()));
         CompletableFuture.runAsync(() -> {
             var audioFeaturesStream = audioFeatures.stream().map(t ->
-                    new dao.entities.AudioFeatures(t.getAcousticness(), t.getAnalysisUrl(), t.getDanceability(), t.getDurationMs(), t.getEnergy(), t.getId(), t.getInstrumentalness(), t.getKey(), t.getLiveness(), t.getLoudness(), t.getSpeechiness(), t.getTempo(), t.getTimeSignature(), t.getTrackHref(), t.getUri(), t.getValence())).collect(Collectors.toList());
+                    new dao.entities.AudioFeatures(t.getAcousticness(), t.getAnalysisUrl(), t.getDanceability(), t.getDurationMs(), t.getEnergy(), t.getId(), t.getInstrumentalness(), t.getKey(), t.getLiveness(), t.getLoudness(), t.getSpeechiness(), t.getTempo(), t.getTimeSignature(), t.getTrackHref(), t.getUri(), t.getValence())).toList();
             db.insertAudioFeatures(audioFeaturesStream);
         });
 
