@@ -7,10 +7,7 @@ import dao.entities.Genre;
 import dao.entities.ScrobbledArtist;
 import org.apache.commons.lang3.tuple.Pair;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 abstract class TagService<T extends EntityInfo, Y extends ScrobbledArtist> implements ChuuRunnable {
@@ -22,6 +19,12 @@ abstract class TagService<T extends EntityInfo, Y extends ScrobbledArtist> imple
         this(dao, lastFM, Map.of(new Genre(genre, ""), collect));
     }
 
+    public TagService(ChuuService dao, ConcurrentLastFM lastFM, List<String> tags, T albumInfo) {
+        this(dao, lastFM, tags.stream()
+                .collect(Collectors.toMap(t -> new Genre(t, null), t -> Collections.singletonList(albumInfo), (t, y) -> t)));
+    }
+
+
     public TagService(ChuuService dao, ConcurrentLastFM lastFM, Map<Genre, List<T>> genres) {
         this.dao = dao;
         this.lastFM = lastFM;
@@ -30,7 +33,7 @@ abstract class TagService<T extends EntityInfo, Y extends ScrobbledArtist> imple
 
     @Override
     public void execute() {
-        List<T> entities = this.genres.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
+        List<T> entities = this.genres.values().stream().flatMap(Collection::stream).toList();
         Map<T, Y> validate = validate(entities);
         Set<String> bannedTags = dao.getBannedTags();
         Set<Pair<String, String>> artistBannedTags = dao.getArtistBannedTags();
